@@ -97,7 +97,7 @@ public class ApiLoginExtension implements BeforeEachCallback, AfterTestExecution
   private static UserJson getCreatedUserForApiLogin(ExtensionContext extensionContext) {
     return ((List<UserJson>) extensionContext.getStore(CreateUserExtension.CREATE_USER_NAMESPACE).get(extensionContext.getUniqueId(), Map.class)
         .get(User.Point.INNER))
-        .getFirst();
+        .get(0);
   }
 
   @Override
